--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "heroku-postbuild": "npm run buildapp && npm run installserver",
     "buildapp": "cd ./www && npm install && npm run build",
     "installserver": "cd ./server && npm install",
-    "start": "cd ./server && npm start"
+    "start": "cd ./server && npm start",
+    "dev": "cd ./server && npm run dev & cd ./www && npm start"
   },
   "repository": {
     "type": "git",
