--- a/www/package.json
+++ b/www/package.json
@@ -9,12 +9,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.1",
     "react-quill": "^1.3.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.35.1",
+    "styled-components": "^5.3.1",
     "tsparticles": "^1.35.1",
     "web-vitals": "^1.1.2"
   },
